--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@testing-library/svelte": "^4.0.3",
 		"@types/jsdom": "^21.1.1",
