--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"start": "npm run build && npm ci --omit dev && node -r dotenv/config build"
 	},
 	"peerDependencies": {
 		"@tensorflow/tfjs-converter": "^3.0.0",
@@ -21,6 +22,10 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@tensorflow-models/qna": "1.0.1",
+		"@tensorflow/tfjs-backend-cpu": "^3.15.0",
+		"@tensorflow/tfjs-converter": "^3.15.0",
+		"@tensorflow/tfjs-core": "^3.15.0",
 		"@testing-library/svelte": "^4.0.3",
 		"@types/jsdom": "^21.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -36,11 +41,10 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
-		"vitest": "^0.25.3",
-		"@tensorflow/tfjs-backend-cpu": "^3.15.0",
-		"@tensorflow/tfjs-converter": "^3.15.0",
-		"@tensorflow/tfjs-core": "^3.15.0",
-		"@tensorflow-models/qna": "1.0.1"
+		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dotenv": "^16.3.1"
+	}
 }
