--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
 		"vitest": "^0.25.3"
 	},
 	"type": "module",
+	"engines": {
+		"node": ">=16"
+	},
 	"dependencies": {
 		"dotenv": "^16.3.1"
 	}
