--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@tensorflow-models/qna": "1.0.1",
 		"@tensorflow/tfjs-backend-cpu": "^3.15.0",
