--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && tsc --noEmit",
+		"build:production": "npm run build && npm ci --omit dev",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -12,7 +13,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"start": "npm run build && npm ci --omit dev && node -r dotenv/config build"
+		"start": "node -r dotenv/config build"
 	},
 	"peerDependencies": {
 		"@tensorflow/tfjs-converter": "^3.0.0",
