--- a/package.json
+++ b/package.json
@@ -15,19 +15,10 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"start": "node -r dotenv/config build"
 	},
-	"peerDependencies": {
-		"@tensorflow/tfjs-converter": "^3.0.0",
-		"@tensorflow/tfjs-core": "^3.0.0"
-	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/adapter-node": "1.3.1",
 		"@sveltejs/kit": "^1.20.4",
-		"@tensorflow-models/qna": "1.0.1",
-		"@tensorflow/tfjs-backend-cpu": "^3.15.0",
-		"@tensorflow/tfjs-converter": "^3.15.0",
-		"@tensorflow/tfjs-core": "^3.15.0",
 		"@testing-library/svelte": "^4.0.3",
 		"@types/jsdom": "^21.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -51,7 +42,7 @@
 		"npm": ">=8"
 	},
 	"dependencies": {
-		"@vercel/kv": "0.2.2",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"npm": "^9.8.1"
 	}
 }
