--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.3.1",
-		"npm": "^9.8.1"
+		"npm": "^9.8.1",
+		"sqlite": "5.0.1",
+		"sqlite3": "5.1.6"
 	}
 }
